Fix nav overflow issues and improve header styling
- I've reduced the font-size slightly on mobile so it's doesn't occur until very small page widths
- It now wraps nicely without overflowing the boundary, obvs. The header height will expand if necessary.
- I've set it so it's only sticky (sticking to the top of the screen) on larger screens, so that it won't take up loads of page space on mobile. It's using the newish position:sticky feature which falls back neatly to just sitting at the top of the screen if not supported 👍
- I've added a really cute background blur filter using the newish 'backdrop-filter' feature, so that it looks like you're looking through frosted glass when it's sitting over the top of your page content. Helps with readability and looks really cute. Still works fine when not supported

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -63,7 +63,6 @@ body {
   color: $text-color;
   background-color: $background-color;
   -webkit-text-size-adjust: 100%;
-  border-top: 5px solid $theme-color;
 }
 
 /**
