--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,15 +2,19 @@
  * Site header   **********************************************************
  */
 .site-header {
-  border-bottom: 1px solid $grey-color-light;
-  background-color: #fff;
-  opacity: 0.75;
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  height: 56px;
+  border-top: 5px solid rgba(mix($theme-color, white), 0.7);
+  border-bottom: 1px solid rgba($grey-color-light, 0.8);
+  background-color: rgba(#fff, 0.8);
+  color: #555;
   width: 100%;
   z-index: 50;
+  padding: 0.5em 0;
+  @media (min-width: $on-palm) {
+    position:sticky;
+    left:0;
+    top:0;
+    backdrop-filter: blur(3px);
+  }
 }
 
 .site-title {
@@ -24,31 +28,22 @@
   }
 }
 .site-nav {
-  float: right;
-  line-height: $nav-height;
+  text-align: right;
   .page-link {
-    line-height: $base-line-height;
+    display: inline-block;
+    margin: 0.5em 0;
+    line-height: 1.2;
     // Gaps between nav items, but not on the first one
     &:not(:first-child) {
       margin-left: 10px;
+    }
+    @include media-query($on-laptop) {
+      font-size: 0.9em;
     }
   }
   .page-link--active {
     color: #111;
     border-bottom: 1px solid #aaa;
-  }
-  @include media-query($on-palm) {
-    position: fixed;
-    top: 0px;
-    right: 10px;
-    text-align: right;
-    &:hover .trigger {
-      display: block;
-      padding-bottom: 5px;
-    }
-    .page-link {
-      display: line;
-    }
   }
 }
 
@@ -112,7 +107,11 @@
  * Page content   **********************************************************
  */
 .page-content {
-  padding: 6em 0 4em; /* VERTICAL PADDING FOR TITLE ON EVERY PAGE */
+  // Vertical padding for title on every page:
+  padding: 3em 0;
+  @include media-query($on-laptop) {
+    padding: 1.6em 0;
+  }
 }
 .page-heading {
   font-size: 20px;
